fix: 이미지에 사이즈를 명시하여 layout shift 방지

--- a/src/component/Home/IntroduceImg/IntroduceImg.module.css
+++ b/src/component/Home/IntroduceImg/IntroduceImg.module.css
@@ -6,5 +6,6 @@
 }
 
 .img {
+  width: 220px;
   height: 220px;
 }
