--- a/src/component/common/Footer/Footer.module.css
+++ b/src/component/common/Footer/Footer.module.css
@@ -32,5 +32,6 @@
 
 .icon {
   height: 30px;
+  width: 30px;
   margin: 0 10px 0 0;
 }
